# i3_workspaces

./: Makefile  dune-project  i3_workspaces.ml  i3_workspaces.opam  readme.md
src/: actions.ml  actions.mli  args.ml  configuration.ml  dune  i3_workspaces.ml  i3dot.ml  layout.ml  option.ml  tree.ml
src/common/: actions.ml  common.ml  dune  option.ml  tree.ml  tree.mli
src/configuration/: configuration.ml  configuration.mli  dune
src/handlers/: binaryLayoutHandler.ml  defaultHandler.ml  defaultHandler.mli  dune  execHandler.ml  handlers.ml  handlers.mli  loggerHandler.ml  option.ml  persistence.ml  registry.ml  registry.mli  simpleLayoutHandler.ml
src/xcb/: dune  xcb.ml  xcb.mli  xcb_types.ml
src/xcb/bindings/: bindings.ml  dune
src/xcb/stubgen/: bindings_c_gen.ml  dune
