opam-version: "2.0"
version: "0.1"
synopsis: "Workspace manager for i3 WM"
name: "i3_workspaces"
authors: ["Sébastien Dailly"]
maintainer: ["Sébastien Dailly"]
license: "WTFPL"
depends: [
  "dune"
  "ocaml"
  "lwt"
  "i3ipc"
  "lwt_ppx"
  "ppx_deriving_argparse"
  "ocaml-inifiles"
]
dev-repo: "git+https://github.com/chimrod/i3_workspaces.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
