opam-version: "2.0"
version: "0.2"
synopsis: "Workspace manager for i3 WM"
name: "i3_workspaces"
authors: ["Sébastien Dailly"]
maintainer: ["Sébastien Dailly"]
license: "WTFPL"
depends: [
  "dune"
  "ocaml"
  "lwt"
  "i3ipc" {>= "0.3"}
  "lwt_ppx"
  "ocaml-inifiles"
]
dev-repo: "git+https://github.com/chimrod/i3_workspaces.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
