(env
  (dev
    (flags (:standard -warn-error -A -cclib -lxcb))
    )
 (release
  (ocamlopt_flags (-O3)))
)

(executables
 (names i3_workspaces i3dot x)
 (libraries 
    configuration
    common
    handlers
    xcb
    lwt 
 )
 (preprocess (pps lwt_ppx ppx_deriving_argparse))
 (public_names i3_workspaces i3dot x)
)
